Fix overflow hidden for blob element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -674,7 +674,7 @@
     /*** Blob ***/
 
     .blob {
-        overflow-x: clip;
+        overflow-x: hidden;
         position: absolute;
         right: 0;
         top: 0;
